--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lineto": "^3.3.0",
     "tailwindcss": "^4.0.3",
     "vanta": "^0.5.24"
   },
