--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-lineto": "^3.3.0",
+    "reactflow": "^11.11.4",
     "tailwindcss": "^4.0.3",
     "vanta": "^0.5.24"
   },
