--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
+    "mongoose": "^8.9.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-lineto": "^3.3.0",
